tests/error/invalid_global_class.gw
#! [contains] 'global' can only be used at class scope
class C {
  {
    var global int i;
  }
}
